--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask-HTTPAuth==4.4.0
 Flask-Migrate==3.0.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
+gunicorn==20.1.0
 iniconfig==1.1.1
 ipython==7.22.0
 ipython-genutils==0.2.0
@@ -24,7 +25,6 @@ parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
 pluggy==0.13.1
-prettytable==2.1.0.dev3
 prompt-toolkit==3.0.18
 psycopg2-binary==2.9.1
 ptyprocess==0.7.0
