--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ environs==9.3.2
 Faker==8.8.2
 Flask==2.0.1
 Flask-HTTPAuth==4.4.0
+Flask-JWT-Extended==4.2.3
 Flask-Migrate==3.0.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
@@ -30,6 +31,7 @@ psycopg2-binary==2.9.1
 ptyprocess==0.7.0
 py==1.10.0
 Pygments==2.8.1
+PyJWT==2.1.0
 pyparsing==2.4.7
 pytest==6.2.3
 python-dateutil==2.8.1
