--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ greenlet==1.1.0
 gunicorn==20.1.0
 idna==2.10
 iniconfig==1.1.1
+ipdb==0.13.9
 ipython==7.22.0
 ipython-genutils==0.2.0
 itsdangerous==2.0.1
